--- a/app/src/main/res/layout/activity_invitations.xml
+++ b/app/src/main/res/layout/activity_invitations.xml
@@ -16,20 +16,19 @@
         android:orientation="vertical"
         android:padding="15dp">
 
-        <TextView
-            style="@style/TextBase.Purple"
-            android:layout_gravity="left"
-            android:layout_marginTop="20dp"
-            android:text="@string/invitations"
-            android:textSize="@dimen/text_medium"
-            android:textStyle="bold" />
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/ic_invitation_profile"
+            app:tint="@color/purple" />
 
         <TextView
             style="@style/TextBase"
             android:layout_gravity="left"
-            android:layout_marginTop="5dp"
-            android:text="@string/invitations_intro"
-            android:textSize="@dimen/text_small" />
+            android:layout_marginTop="20dp"
+            android:text="@string/invitations_intro" />
 
         <LinearLayout
             android:layout_width="match_parent"
