- added replacement of # - added update app view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <net.mercadosocial.moneda.views.UpdateAppView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <FrameLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
