--- a/app/src/main/res/layout/view_select_mes.xml
+++ b/app/src/main/res/layout/view_select_mes.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    android:padding="20dp">
+    android:gravity="center">
 
     <TextView
         style="@style/TextBase"
@@ -15,6 +16,10 @@
         android:id="@+id/recycler_mes_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"/>
+        android:minHeight="250dp"
+        android:layout_marginTop="15dp"
+        tools:listitem="@layout/row_mes_item"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </LinearLayout>
