--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -10,7 +10,7 @@
         android:id="@+id/menuItem_change_social_market"
         android:icon="@drawable/ic_swap"
         android:title="@string/change_social_market"
-        android:visible="false"/>
+        android:visible="true"/>
 
     <item
         android:id="@+id/menuItem_invitations"
@@ -59,6 +59,11 @@
                 android:id="@+id/nav_contact_vimeo"
                 android:icon="@mipmap/ic_nav_vimeo"
                 android:title="@string/vimeo" />
+
+            <item
+                android:id="@+id/nav_contact_instagram"
+                android:icon="@mipmap/ic_nav_instagram"
+                android:title="@string/instagram" />
 
         </menu>
     </item>
