--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -42,6 +42,7 @@
                     android:visibility="gone" />
 
                 <LinearLayout
+                    android:id="@+id/view_etics_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
