--- a/app/src/main/res/layout/fragment_novelties.xml
+++ b/app/src/main/res/layout/fragment_novelties.xml
@@ -1,16 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.entities.list.EntitiesListFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_empty_state"
+        style="@style/TextBase"
         android:gravity="center_horizontal"
-        android:text="NOTICIAS"
-        android:layout_gravity="center"
-        android:textSize="30sp"
+        android:text="@string/no_novelties"
+        android:layout_centerInParent="true"
+        android:textColor="@color/grey"
         android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -19,4 +20,4 @@
         android:layout_height="match_parent"
         android:visibility="visible"/>
 
-</LinearLayout>
+</RelativeLayout>
