--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -44,9 +44,16 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tv_user_name"
+                        android:id="@+id/tv_name"
                         style="@style/TextBase.White"
                         android:textSize="@dimen/text_large"/>
+
+                    <TextView
+                        android:id="@+id/tv_username"
+                        style="@style/TextBase.White"
+                        android:textSize="@dimen/text_small_2"
+                        android:visibility="visible"
+                        android:layout_marginTop="5dp"/>
 
                     <TextView
                         android:id="@+id/tv_mes"
