- added screen to block etics purchases - bug fix in api request

--- a/app/src/main/res/layout/activity_get_boniatos.xml
+++ b/app/src/main/res/layout/activity_get_boniatos.xml
@@ -9,11 +9,19 @@
 
     <include layout="@layout/toolbar" />
 
+    <TextView
+        style="@style/TextBase.Purple"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:padding="30dp"
+        android:text="@string/end_etics_temporal_msg" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             style="@style/TextBase.Purple"
