- Added member card and QR scanner - changed etics text in wallet and menu item - refactor of api classes to hide api urls - refactor person and entity classes to extend Account - Fixed intro select mes city button to be enabled

--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -18,7 +18,7 @@
         android:title="@string/invitations"
         android:visible="false"/>
 
-    <item android:title="@string/the_boniato" >
+    <item android:title="@string/the_boniato" android:visible="false" >
 
         <menu>
             <item
