--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_entities"
         android:icon="@mipmap/ic_entities"
         android:title="@string/entities" />
+
+    <item
+        android:id="@+id/navigation_member_card"
+        android:icon="@mipmap/ic_member_card"
+        app:iconTint="@color/purple"
+        android:title="@string/member_card" />
 
     <item
         android:id="@+id/navigation_wallet"
