--- a/app/src/main/res/xml/security.xml
+++ b/app/src/main/res/xml/security.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">vps530178.ovh.net</domain>
-        <domain includeSubdomains="true">vps632673.ovh.net</domain>
+    <domain-config cleartextTrafficPermitted="false">
         <domain includeSubdomains="true">app.mercadosocial.net</domain>
+        <domain includeSubdomains="true">ngrok.io</domain>
     </domain-config>
 </network-security-config>
