--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -163,13 +163,13 @@
                     android:layout_height="wrap_content"
                     android:background="@color/purple"
                     android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:padding="12dp">
 
                     <TextView
                         style="@style/TextBase.White"
                         android:layout_marginLeft="20dp"
                         android:text="@string/members_benefits"
-                        android:textSize="20dp" />
+                        android:textSize="@dimen/text_large" />
 
                 </LinearLayout>
 
@@ -184,13 +184,13 @@
                     android:layout_height="wrap_content"
                     android:background="@color/purple"
                     android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:padding="12dp">
 
                     <TextView
                         style="@style/TextBase.White"
                         android:layout_marginLeft="20dp"
                         android:text="@string/entity_offers"
-                        android:textSize="20dp" />
+                        android:textSize="@dimen/text_large" />
 
                 </LinearLayout>
 
