--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,104 +25,59 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
+                android:gravity="center"
+                android:orientation="vertical"
                 android:padding="20dp">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
-                    android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_profile_name"
+                    style="@style/TextTitleComfortaa"
+                    android:text="Juio Test"
+                    android:layout_marginBottom="20dp" />
 
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/img_profile"
-                        android:layout_width="110dp"
-                        android:layout_height="110dp"
-                        android:layout_marginBottom="20dp"
-                        android:adjustViewBounds="true"
-                        app:srcCompat="@mipmap/ic_avatar_2" />
 
-                    <TextView
-                        style="@style/TextBase"
-                        android:text="@string/type"
-                        android:textSize="@dimen/text_small_2" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img_profile"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_marginBottom="8dp"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@mipmap/ic_avatar_2" />
 
-                    <TextView
-                        android:id="@+id/tv_profile_type"
-                        style="@style/TextBase.Purple"
-                        android:layout_marginTop="3dp"
-                        android:text="Consumidora"
-                        android:textSize="@dimen/text_small_2"
-                        android:textStyle="bold" />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_change_image"
+                    style="@style/ButtonMes"
+                    android:text="@string/change_image"
+                    android:layout_marginBottom="20dp" />
 
-                    <TextView
-                        style="@style/TextBase"
-                        android:layout_marginTop="10dp"
-                        android:text="@string/market"
-                        android:textSize="@dimen/text_small_2" />
+                <TextView
+                    style="@style/TextBase"
+                    android:text="@string/type"
+                    android:textSize="@dimen/text_small_2" />
 
-                    <TextView
-                        android:id="@+id/tv_profile_market"
-                        style="@style/TextBase.Purple"
-                        android:layout_marginTop="3dp"
-                        android:text="Madrid"
-                        android:textSize="@dimen/text_small_2"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tv_profile_type"
+                    style="@style/TextBase.Purple"
+                    android:layout_marginTop="3dp"
+                    android:text="Consumidora"
+                    android:textSize="@dimen/text_small_2"
+                    android:textStyle="bold" />
 
-                </LinearLayout>
+                <TextView
+                    style="@style/TextBase"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/market"
+                    android:textSize="@dimen/text_small_2" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
-                    android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_profile_market"
+                    style="@style/TextBase.Purple"
+                    android:layout_marginTop="3dp"
+                    android:text="Madrid"
+                    android:textSize="@dimen/text_small_2"
+                    android:textStyle="bold" />
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
 
-                        <EditText
-                            android:id="@+id/edit_name_person"
-                            style="@style/EditTextWhiteBg"
-                            android:layout_marginTop="15dp"
-                            android:hint="@string/name"
-                            android:inputType="textCapWords" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp">
-
-                        <EditText
-                            android:id="@+id/edit_surnames_person"
-                            style="@style/EditTextWhiteBg"
-                            android:hint="@string/surname"
-                            android:inputType="textCapWords" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp">
-
-                        <EditText
-                            android:id="@+id/edit_nif"
-                            style="@style/EditTextWhiteBg"
-                            android:enabled="false"
-                            android:hint="@string/nif"
-                            android:inputType="textCapCharacters" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btn_save_profile"
-                        style="@style/ButtonMes"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:minWidth="0dp"
-                        android:text="@string/save" />
-                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -188,13 +143,13 @@
                 android:id="@+id/btn_logout"
                 style="@style/ButtonMes.Green"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/bg_button_purple_outline"
                 android:minWidth="70dp"
                 android:text="@string/logout"
                 android:textAllCaps="false"
                 android:textSize="@dimen/text_medium"
-                android:textStyle="normal"
-                android:layout_marginBottom="15dp"/>
+                android:textStyle="normal" />
 
 
         </LinearLayout>
