--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,58 +26,74 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:padding="20dp">
+                android:orientation="horizontal"
+                android:padding="15dp">
 
-                <TextView
-                    android:id="@+id/tv_profile_name"
-                    style="@style/TextTitleComfortaa"
-                    android:text="Juio Test"
-                    android:layout_marginBottom="20dp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/img_profile"
+                        android:layout_width="110dp"
+                        android:layout_height="110dp"
+                        android:layout_marginBottom="8dp"
+                        android:adjustViewBounds="true"
+                        app:srcCompat="@mipmap/ic_avatar_2" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_change_image"
+                        style="@style/ButtonMes"
+                        android:layout_marginBottom="20dp"
+                        android:text="@string/change_image"
+                        android:minWidth="0dp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="15dp">
+
+                    <TextView
+                        android:id="@+id/tv_profile_name"
+                        style="@style/TextTitleComfortaa"
+                        android:layout_marginBottom="20dp"
+                        android:text="Juio Test" />
+
+                    <TextView
+                        style="@style/TextBase"
+                        android:text="@string/type"
+                        android:textSize="@dimen/text_small_2" />
+
+                    <TextView
+                        android:id="@+id/tv_profile_type"
+                        style="@style/TextBase.Purple"
+                        android:layout_marginTop="3dp"
+                        android:text="Consumidora"
+                        android:textSize="@dimen/text_small_2"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        style="@style/TextBase"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/market"
+                        android:textSize="@dimen/text_small_2" />
+
+                    <TextView
+                        android:id="@+id/tv_profile_market"
+                        style="@style/TextBase.Purple"
+                        android:layout_marginTop="3dp"
+                        android:text="Madrid"
+                        android:textSize="@dimen/text_small_2"
+                        android:textStyle="bold" />
 
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/img_profile"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
-                    android:layout_marginBottom="8dp"
-                    android:adjustViewBounds="true"
-                    app:srcCompat="@mipmap/ic_avatar_2" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_change_image"
-                    style="@style/ButtonMes"
-                    android:text="@string/change_image"
-                    android:layout_marginBottom="20dp" />
-
-                <TextView
-                    style="@style/TextBase"
-                    android:text="@string/type"
-                    android:textSize="@dimen/text_small_2" />
-
-                <TextView
-                    android:id="@+id/tv_profile_type"
-                    style="@style/TextBase.Purple"
-                    android:layout_marginTop="3dp"
-                    android:text="Consumidora"
-                    android:textSize="@dimen/text_small_2"
-                    android:textStyle="bold" />
-
-                <TextView
-                    style="@style/TextBase"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/market"
-                    android:textSize="@dimen/text_small_2" />
-
-                <TextView
-                    android:id="@+id/tv_profile_market"
-                    style="@style/TextBase.Purple"
-                    android:layout_marginTop="3dp"
-                    android:text="Madrid"
-                    android:textSize="@dimen/text_small_2"
-                    android:textStyle="bold" />
-
-
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
