- Intro screens changed - adapted for Murcia MES

--- a/app/src/main/res/values/intro.xml
+++ b/app/src/main/res/values/intro.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="title_intro_0">¡Hola!</string>
-    <string name="text_intro_0">Bienvenido, bienvenida a la app del Mercado Social</string>
+    <string name="text_intro_0">Bienvenida a la app del Mercado Social</string>
 
     <string name="title_intro_1">Somos</string>
     <string name="text_intro_1">una red que promueve la economía social y solidaria</string>
@@ -13,9 +13,9 @@
     <string name="title_intro_3">Accederás</string>
     <string name="text_intro_3">a las últimas novedades y convocatorias del Mercado Social</string>
 
-    <string name="title_intro_4">Podrás</string>
-    <string name="text_intro_4">realizar pagos en etics y recargar tu monedero</string>
+    <string name="title_intro_4">Tendrás</string>
+    <string name="text_intro_4">acceso a tu carné de socia digital</string>
 
-    <string name="title_intro_5">Y por cada compra</string>
-    <string name="text_intro_5">que realices recibirás una bonificación.</string>
+    <string name="title_intro_5">Para beneficiarte</string>
+    <string name="text_intro_5">de las ventajas y descuentos de entidades del MES</string>
 </resources>
