--- a/app/src/main/res/layout/fragment_entities_list.xml
+++ b/app/src/main/res/layout/fragment_entities_list.xml
@@ -1,31 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.entities.list.EntitiesListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:background="@color/green_light"
         android:gravity="center"
         android:orientation="vertical"
-        android:background="@color/green_light"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="35dp"
-            android:paddingRight="35dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:gravity="center"
             android:background="@drawable/bg_distance_text"
-            android:textColor="#333333"
-            android:text="A 100 m"/>
+            android:gravity="center"
+            android:paddingLeft="35dp"
+            android:paddingTop="5dp"
+            android:paddingRight="35dp"
+            android:paddingBottom="5dp"
+            android:text="A 100 m"
+            android:textColor="#333333" />
 
     </LinearLayout>
 
@@ -38,35 +38,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_moreProgress="@layout/view_more_progress"
-            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"/>
-
-        <net.mercadosocial.moneda.views.RotativeImageView
-            style="@style/ProgressMES"
-            android:layout_centerInParent="true"/>
+            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll" />
 
         <LinearLayout
             android:id="@+id/view_empty_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_centerInParent="true"
             android:gravity="center"
-            android:layout_centerInParent="true">
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                app:tint="@color/grey"
-                android:src="@mipmap/ic_entity_not_found"/>
+                android:src="@mipmap/ic_entity_not_found"
+                app:tint="@color/grey" />
 
             <TextView
                 android:id="@+id/tv_empty_list_entities"
                 style="@style/TextBase"
                 android:layout_width="200dp"
-                android:textColor="@color/grey"
-                android:gravity="center_horizontal"
                 android:layout_marginTop="15dp"
-                android:text="@string/empty_state_text_entities"/>
+                android:gravity="center_horizontal"
+                android:text="@string/empty_state_text_entities"
+                android:textColor="@color/grey" />
 
         </LinearLayout>
 
@@ -74,14 +70,14 @@
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:background="@drawable/entities_trans_gradient_top"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="@drawable/entities_trans_gradient_bottom"
             android:layout_alignParentBottom="true"
-            android:visibility="gone"/>
+            android:background="@drawable/entities_trans_gradient_bottom"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </LinearLayout>
