--- a/app/src/main/res/layout/fragment_entities_list.xml
+++ b/app/src/main/res/layout/fragment_entities_list.xml
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.malinskiy.superrecyclerview.SuperRecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_entities"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
