--- a/app/src/main/res/layout/fragment_filter_entities.xml
+++ b/app/src/main/res/layout/fragment_filter_entities.xml
@@ -52,11 +52,12 @@
                 android:id="@+id/switch_accepts_etics"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/accepts_etics" />
+                android:text="@string/accepts_etics"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"/>
 
             <View
                 style="@style/SeparatorHorizontal.Grey"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp" />
 
             <TextView
