- Added badge feature: api parse, show in entity info if exists and list filter - minor ui improvements

--- a/app/src/main/res/layout/fragment_filter_entities.xml
+++ b/app/src/main/res/layout/fragment_filter_entities.xml
@@ -56,6 +56,14 @@
                 android:layout_marginBottom="10dp"
                 android:visibility="visible"/>
 
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/check_with_badge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/with_badge"
+                android:layout_marginBottom="10dp"
+                android:visibility="visible" />
+
             <View
                 style="@style/SeparatorHorizontal.Grey"
                 android:layout_marginBottom="10dp" />
