--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -127,7 +127,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30dp"
+                    android:padding="12dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
@@ -157,6 +157,30 @@
                         android:src="@mipmap/ic_rrss_instagram" />
 
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/view_distintivo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="12dp">
+
+                    <TextView
+                        style="@style/TextBase.Purple"
+                        android:layout_weight="1"
+                        android:text="@string/distintivo_info"
+                        android:layout_marginRight="16dp"/>
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/img_distintivo_balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="150dp"
+                        app:srcCompat="@mipmap/img_distntivo_balance"
+                        android:adjustViewBounds="true"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="30dp" />
                 </LinearLayout>
 
                 <LinearLayout
