--- a/app/src/main/res/xml/security.xml
+++ b/app/src/main/res/xml/security.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="false">
+    <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">app.mercadosocial.net</domain>
         <domain includeSubdomains="true">ngrok.io</domain>
+        <domain includeSubdomains="true">192.168.1.165</domain>
     </domain-config>
 </network-security-config>
